@@ -1,20 +1,24 @@
-## 见技术文档
+README
+==================================================
+### Development Environment: 
 
-## Getting Started
+- System: MacOS 12.3 / Windows 10 / Windows 11
+- JDK: JDK 15/17
+- IDE: Visual Studio Code (VSCode) with 'Extension Pack for Java' and 'Gitlens' / IntelliJ IDEA
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+------
 
-## Folder Structure
+### How to run:
 
-The workspace contains two folders by default, where:
+First you need to make sure that you have installed JDK15 or above correctly.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+- You can directly double-click the `2022EBU6304-G14-coursework.jar` file we have packaged. 
+  Tips: If it's not loaded correctly, try typing `java -jar --enable-preview 2022EBU6304-G14-coursework.jar` in the console.
+- Use VSCode with plugins to open the project folder then you can see our project inside JAVA PROJECTS, 
+  you can run it directly by clicking `Debug`.
+- Use IntelliJ IDEA to open the project folder then you can run it by clicking `run 'App'`
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
 
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+------
+For more information, you can check out our collaborative development documentation at [软工大作业 技术文档 - 飞书云文档 (feishu.cn)](https://rith23ip8i.feishu.cn/docs/doccnLR2Ti2b1G0daRUfDsWY4qg) (in Chinese)
